--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# User Added:
+#############
+*/platforms/
+*/plugins/
+
+# Added by GitHub:
+##################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
